Wed Aug 16 13:53:00 BST 2000 Olly Betts

	* Fixed up a few mismatched OmSettings parameter names.

Wed Aug 16 12:41:00 BST 2000 Olly Betts

	* WARNING: Incompatible changes to API!

	* OmSettings used to replace DatabaseBuilderParams and ad-hoc
	  passing of database parameters as vector<string>.
	  
	* Added OmSettings::get_description() and macros so it can be
	  written to streams

	* OmSettings values can now also be bool or vector<string>

	* Backend types da_flimsy/da_heavy replaced by da with heavyduty
	  parameter.  Similarly for db_* backends.

Wed Aug 16 12:08:00 BST 2000 Olly Betts

	* stemtest.pl now complains if srcdir isn't set

Tue Aug 15 21:13:22 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Various bits of work done to Quartz.  Now opens a DB environment,
	  or would if it were given an appropriate path.

Tue Aug 15 20:39:45 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Correct library name to link against for BerkeleyDB 3.1, from libdb
	  to libdb_cxx

Tue Aug 15 20:24:19 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Added OmFeatureUnavailableError exception, to be thrown when a
	  feature is not compiled in, or otherwise unavailable.

Tue Aug 15 15:19:45 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Incorporated Jon Fielder's patches to TcpServer - it's now a
	  forking server rather than serving connections one at a time.

Tue Aug 15 14:47:06 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Link quartz database into DatabaseBuilder and testsuite.  Now
	  ready to begin writing it. :)

Tue Aug 15 11:27:04 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Added initial (empty) quartz_database.{cc,h} files, so that
	  distcheck will work again.

Tue Aug 15 11:24:51 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Removed netprogs/omnetclient.cc - unused file.

Mon Aug 14 19:11:03 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>
